--- a/_config.yml
+++ b/_config.yml
@@ -25,10 +25,10 @@ disqus_shortname: myshortname
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
-  primary: 18bc9c #80B3FF
-  primary-rgb: "24,288,156" #"128,179,255"
-  secondary: 2c3e50 #FD6E8A
-  secondary-dark: 233140 #A2122F
+  primary: d3d3d3 #d3d3d3
+  primary-rgb: "211, 211, 211" #"211, 211, 211"
+  secondary: 009e37 #009e37
+  secondary-dark: 000be7 #000be7
 
 # Footer settings
 footer:
