--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ disqus_shortname: myshortname
 color:
   primary: 0097ff #d3d3d3
   primary-rgb: "0, 151, 255" #"211, 211, 211"
-  secondary: d3d3d3 #009e37
+  secondary: 0d4f86 #009e37
   secondary-dark: 7a7a7a #000be7
 
 # Footer settings
