--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@ email: jacrowley@ucdavis.edu
 url: https://jacrowley-lin.github.io/
 description: "Personal Website for JC, Phd Student at UC Davis"
 keywords: "your keywords, separated by commas"
-skills: "Web Developer - Graphic Artist - User Experience Designer"
-meta_author: LastName FirstName
+skills: "Linguistics PhD Student — UC Davis"
+meta_author: Crowley Jordan
 
 # Google webmaster tools
 google_verify:
@@ -32,31 +32,35 @@ color:
 
 # Footer settings
 footer:
-  copyright: Dr. Henry Jekyll
+  copyright: JC
   location: Location
   social: Around the Web
   credits: Credits
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
-  - title: twitter
-    url: http://twitter.com/jekyllrb
-  - title: facebook
-    url:
-  - title: stack-overflow
-    url: http://stackoverflow.com/questions/tagged/jekyll
-  - title: bitbucket
-    url: http://bitbucket.org/jekyll
+  - title: instagram
+    url: https://www.instagram.com/toowamba/
+  - title: UCD Linguistics
+    url: https://linguistics.ucdavis.edu/
+  - title: orcid
+    url: https://orcid.org/0000-0002-6704-9795
+  - title: linkedin
+    url: https://www.linkedin.com/in/jordan-crowley-006b55135/
   - title: github
-    url: http://github.com/jekyll
+    url: http://github.com/jacrowley-lin
+  - title: researchgate
+    url: https://www.researchgate.net/profile/Jordan_Crowley
 
 # Postal address (add as many lines as necessary)
 address:
-  - line: 3481 Melrose Place
-  - line: Beverly Hills, CA 90210
+  - line: 460 Kerr Hall
+  - line: 1 Shields Avenue
+  - line: Davis, CA 95616
+
 
 # Credits content
-credits: 'Freelancer is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.'
+credits: Github theme created by 'Freelancer' at <a href="http://startbootstrap.com">Bootstrap</a>.'
 
 # Build settings
 markdown: kramdown
