--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: JC
+title: Jordan (JC) Crowley
 email: jacrowley@ucdavis.edu
 url: https://jacrowley-lin.github.io/
 description: "Personal Website for JC, Phd Student at UC Davis"
