--- a/_config.yml
+++ b/_config.yml
@@ -13,15 +13,11 @@ google_verify:
 # https://ssl.bing.com/webmaster/configure/verify/ownership Option 2 content= goes here
 bing_verify:
 
-# Contact form:
-# - static : pass through formspree.io to validate email sending
-# - disqus : replace contact form by disqus thread
-# - comment the line below if you want to stick with the default PHP contact form
-# contact: static
 
-# If you use disqus you need disqus shortname
-# https://help.disqus.com/customer/portal/articles/466208
-# disqus_shortname: myshortname
+collections:
+  wanderlust:
+    output: true
+
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
