--- a/_data/wanderlust.yml
+++ b/_data/wanderlust.yml
@@ -1,5 +1,5 @@
 - title: Thailand
   modal-id: 1
-  img: chinese-characters.png
+  img: thailand1.png
   alt: image-alt
   description: This is just a test. I want to see if the code works.
