--- a/_data/wanderlust.yml
+++ b/_data/wanderlust.yml
@@ -1,5 +1,5 @@
 # _data/wanderlust.yml
-- modal-id: 1        # must be unique site-wide!
+- modal-id: w1        # must be unique site-wide!
   title: Thailand
   img: thailand1.png
   alt: People riding scooters inside the old city
@@ -7,7 +7,7 @@
   description: >
     A month-long phonetics field class, plus a lot of khao soi hunting.
 
-- modal-id: 2
+- modal-id: w2
   title: Kyoto
   img: thailand2.png
   alt: Torii gates at Fushimi-Inari shrine
