--- a/_data/wanderlust.yml
+++ b/_data/wanderlust.yml
@@ -9,7 +9,7 @@
 
 - modal-id: w2
   title: Kyoto
-  img: thailand2.jpg
+  img: thailand2.jpeg
   alt: Torii gates at Fushimi-Inari shrine
   trip-date: Aug 2023
   description: >
